# polarclub

./: README.md  additional_features.py  admin_system.py  ai_assistant.py  app.py  assignment_system.py  attendance_system.py  auth.py  backup_system.py  board_system.py  chat_system.py  data_manager.py  deployment_features.py  enhanced_features.py  error_handler.py  gallery_system.py  gamification_system.py  initialize_data.py  logging_system.py  notification_system.py  portfolio_system.py  pyproject.toml  quiz_system.py  replit.md  report_generator.py  requirements.txt  schedule_system.py  search_system.py  test_utils.py  ui_components.py  video_conference_system.py  vote_system.py
attached_assets/: Pasted---1750845112138_1750845112139.txt  Pasted--2025-06-23-07-54-03-138-Uncaught-app-execution-Traceback-most-recent-call-last-File-home--1750665288840_1750665288841.txt  Pasted--Collecting-usage-statistics-To-deactivate-set-browser-gatherUsageStats-to-false-You-can--1750846928929_1750846928929.txt  Pasted--LOG-Authentication-Login-fa-1750844722267_1750844722268.txt  Pasted--Prompt-for-Replit-AI-AI-6--1750599214260_1750599214260.txt  Pasted--Replit-Prompt-Streamlit-6--1750497736817_1750497736817.txt  Pasted--home-runner-workspace-data-manager-py-176-FutureWarning-Setting-an-item-of-incompatible-dtype--1750591562551_1750591562551.txt  Pasted--workspace-python-test-utils-py--1750676169034_1750676169035.txt  Pasted--workspace-python-test-utils-py--1750769512127_1750769512128.txt  Pasted-Padlet-Thinkerbell-6--1750497731617_1750497731617.txt  app_1750501826021.py  (+14 more)
(+20 files in other folders)
